css/resume_site.css
* {
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
    font-family: sans-serif;
}

.container {
    width: 100%;
}

.header {
    width: 100%;
    height: 8vh;
    display: flex;
    padding: 20px;
    justify-content: space-between;
    margin-bottom: 15px;
    position: fixed;
    background-color: #ffffff;
}

.headerLeft, .headerRight {
    padding: 5px 10px; 
    text-align: center;
    /* border: 1px solid black; */
}

.headerLeft {
    width: 42%;
    font-size: 1.1em;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-left: 5px;
}

#title {
    font-weight: 200;
    font-size: .8em;
}

.headerRight {
    width: 40%;
    display: flex;
    justify-content: flex-end;
}

.headerRight ul {
    font-size: 0.9em;
    font-weight: 200;
    list-style-type: none;
    display: flex;
    align-items: center;
}

.headerRight li {
    display: inline-block;
    margin: 0px 10px;
    text-align: right;
}

.active{
    color: #3D90D3;
}

li a:hover {
    color: #3D90D3;
}

/* --------
    Main Content Section
                --------------*/

.indexMain {
    display: flex;
    padding-top: 8vh;
}

.main {
    width: 100%;
    background-color: #27557C;
    height: 2000px;
}

.mainLeft{
    width: 40%;
    background-color: #27557C;
    display: flex;
    align-items: center;
    position: relative;
    height: 84vh;
}

.mainRight {
    width: 60%;
    height: 84vh;
    display: flex;
    align-items: center;
    position: relative;
}

.mainContent {
    width: 750px;
    height: 46vh;
    display: flex;
    position: absolute;
    left: -275px;
}

.mainContent h2 {
    font-size: 6em;
}

#byline {
    font-size: 1.5em;
    font-weight: 200;
}

.hero {
    width: 450px;
    margin-right: 40px;
    background-color: #CCC96F;
    box-shadow: -5px 5px 10px 5px rgba(0,0,0,0.1); 
    display: flex;
    flex-direction: column;
}

.heroText {
    width: 400px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.heroTop{
    height: 90%;
    width: 100%;
    padding: 15px;
    text-align: center;
}

#heroFace {
    width: 60%;
    border-radius: 45%;
    margin-top: 15px;
}

#name {
    font-size: 2em;
    font-weight: bold;
}

#title{
    font-size: 1.2em;
}

.heroLinks{
    height: 10%;
    width: 100%;
    background-color: #ffffff;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.hContainer {
    width: 25%;
    display: flex;
    justify-content: space-evenly;
}

a {
    color: black;
    text-decoration: none;
}

#hr {
    width: 15%;
    height: 1px;
    margin: 20px auto;
    background-color: #27557C;
}

button {
    padding: 8px 25px;
    width: 125px;
    border-radius: 50px;
    font-weight: bold;
    border: none;
}

#resume, #projects:hover {
    background-color: #3D90D3;
    color: #ffffff;
    border: 1px solid #3D90D3;
    transition: background-color .5s;
}


#resume:hover {
    background-color: #ffffff;
    color: #000000;
    border: 1px solid  #3D90D3;
    transition: background-color .3s;
}

#projects {
    background-color: #ffffff;
    border: 1px solid #000000;
    transition: background-color .5s;
}

.footer {
    width: 100%;
    height: 8vh;
    background-color: #ffffff;
    display: flex;
    justify-content: space-between;
    position: fixed;
    bottom: 0;
}

.footLeft {
    width: 25%;
}

.footRight {
    width: 35%;
    display: flex;
    justify-content: space-evenly;
    /* margin-right: 48px; */
    margin-top: 18px;
    padding-left: 5px;
}

.footerContent {
    text-align: center;
}

h4 {
    margin-bottom: 8px;
}

